# starling_cams

./: package.xml  setup.cfg  setup.py
cam_configs/: opencv_tracking_down_intrinsics.yml
starling_cams/: tracking_cam_sync.py
