[develop]
script_dir=$base/lib/starling_cams
[install]
install_scripts=$base/lib/starling_cams

#[options.data_files]
#share/ament_index/resource_index/packages = resource/starling_cams
#share/starling_cams = package.xml
#share/starling_cams/cam_configs = cam_configs/*.yml
#share/starling_cams/launch = launch/*.py
